--- a/css/index.css
+++ b/css/index.css
@@ -959,7 +959,7 @@ body {
 .sharePrincess{
 	width:1.76rem;
 	height:3.36rem;
-	background:url(../img/sharePrincess.png) no-repeat center;
+	background:url(../img/sharemedal.png) no-repeat center;
 	background-size:contain;
 	margin:0.28rem auto 0;
 	position: relative;
